prometheus/gateway.yml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: my-prometheus-gateway

spec:
  gatewayClassName: my-gateway-class
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: http-prometheus-app
  namespace: default

spec:
  parentRefs:
    - name: my-prometheus-gateway

  hostnames:
    - prometheus.costalong.cn

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: prometheus
          port: 9090
          weight: 1
